fixes in expenseses and database(temporarly)