@@ -37,12 +37,7 @@ public class UserServiceImpl implements UserService {
         user.setEmail(userDto.getEmail());
         // encrypt the password using spring security
         user.setPassword(passwordEncoder.encode(userDto.getPassword()));
-
-        Role role = roleRepository.findByName("ROLE_ADMIN");
-        if(role == null){
-            role = checkRoleExist();
-        }
-        user.setRoles(Arrays.asList(role));
+        user.setRoles(List.of(getRole()));
         userRepository.save(user);
     }
 
@@ -74,10 +69,15 @@ public class UserServiceImpl implements UserService {
         return userDto;
     }
 
-    private Role checkRoleExist(){
+    private Role getRole(){
+//        UNCOMMENT OR COMMENT DEPENDING ON WHAT ROLE YOU WANT TO CREATE
+//
         Role role = new Role();
         role.setName("ROLE_USER");
         return roleRepository.save(role);
+//        Role role = new Role();
+//        role.setName("ROLE_ADMIN");
+//        return roleRepository.save(role);
     }
 
 }
